feature: 为常用函数添加 el 功能

--- a/testDIY/cgi/RequestPostTest.html
+++ b/testDIY/cgi/RequestPostTest.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="biz.php" method="post">
+<form action="RequestPostTest.php" method="post">
   <input name="myID" value="123" type="hidden">
   <input type="text" name="myName" value="zhangsan"> <br>
   <input type="checkbox" id="myJob" name="myJob"><label for="myJob">工作</label> <br>
